@@ -1,14 +1,14 @@
 hamt_go/TODO
 
 2014-04-07
-    * table_test needs to be elaborated to make sure that what's in
-        the slot matches the index
+    * table_test needs to be elaborated to make sure that what's in     * DONE
+        the slot matches the index                                      * DONE
 
 2014-04-05
     * implement HAMT32 and tests first, then HAMT64 and tests
 
 2014-04-04
-    * move insert code from hamt_test:TestInsert into Table.Insert()
+    * move insert code from hamt_test:TestInsert into Table.Insert()    * DONE
     * need HAMT.{Insert,Find,Delete}() and tests
 
     * need perf tests, all 6 variants (32,64 * 3)
