@@ -11,11 +11,11 @@ import (
 var _ = fmt.Print
 
 type Bytes32Key struct {
-	slice []byte
+	Slice []byte
 }
 
 type Bytes64Key struct {
-	slice []byte
+	Slice []byte
 }
 
 func NewBytes32Key(b []byte) (k *Bytes32Key, err error) {
@@ -24,7 +24,7 @@ func NewBytes32Key(b []byte) (k *Bytes32Key, err error) {
 	} else if len(b) < 8 {
 		err = ShortKey
 	} else {
-		k = &Bytes32Key{slice: b}
+		k = &Bytes32Key{Slice: b}
 	}
 	return
 }
@@ -35,7 +35,7 @@ func NewBytes64Key(b []byte) (k *Bytes64Key, err error) {
 	} else if len(b) < 16 {
 		err = ShortKey
 	} else {
-		k = &Bytes64Key{slice: b}
+		k = &Bytes64Key{Slice: b}
 	}
 	return
 }
@@ -44,7 +44,7 @@ func NewBytes64Key(b []byte) (k *Bytes64Key, err error) {
 
 // convert the first 4 bytes of the key into an unsigned uint32
 func (b *Bytes32Key) Hashcode32() (hc uint32, err error) {
-	buf := bytes.NewReader(b.slice)
+	buf := bytes.NewReader(b.Slice)
 	err = binary.Read(buf, binary.LittleEndian, &hc)
 	if err != nil {
 		fmt.Printf("attempt to read key failed: %v\n", err)
@@ -54,7 +54,7 @@ func (b *Bytes32Key) Hashcode32() (hc uint32, err error) {
 
 // convert the first 8 bytes of the key into an unsigned uint64
 func (b *Bytes64Key) Hashcode64() (hc uint64, err error) {
-	buf := bytes.NewReader(b.slice)
+	buf := bytes.NewReader(b.Slice)
 	err = binary.Read(buf, binary.LittleEndian, &hc)
 	if err != nil {
 		fmt.Printf("attempt to read key failed: %v\n", err)
